--- a/7.University Website/index.html
+++ b/7.University Website/index.html
@@ -152,7 +152,7 @@
                     </div>
                 </div>
     </section>
-    <!-- shih -->
+    <!-- shih singh-->
 
     <!-- </div>
         <div class="campusimages">
