Added favicon image

--- a/2. Job Portal/index.htm
+++ b/2. Job Portal/index.htm
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="applybox">
             <h1>Job Application
-                <span class="Small">(Web)</span>
+                <span class="Small">(Web)</span>   <!-- span is used to write a peice of word in same line -->
             </h1>
             <form action="php.php">
                 <div class="form_container">
